Made more shared css and used it to style the output page

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,29 @@ h3 {
 	margin: 0.25rem 0rem;
 	/* font-size:1.5em; */
 }
+
+.SectionContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: stretch;
+	border: 1px;
+	border-style: solid;
+	border-color: blue;
+}
+
+.Section {
+	/* background-color: #EEEEEE; */
+	margin: 1rem;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	min-width: 300px;
+	/* border: 1px;
+	border-style: solid;
+	border-color: black; */
+}
+
+.PlayersList {
+	flex-direction: column;
+}
