fixed hover mobile bug and renamed button class

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h3 {
 	align-items: stretch;
 	border: 1px;
 	border-style: solid;
-	border-color: blue;
+	border-color: transparent;
 }
 
 .Section {
